# game_of_life____________

./: CMakeLists.txt  Life.cpp  Life.h  Life_tests.cpp  Rules.md
life_backend/: CMakeLists.txt
life_backend/include/: Life.h
life_backend/src/: Life.cpp
life_frontend/: life_frontend.cpp
life_tests/: Life_tests.cpp  library_tests.cpp
mybuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example_tests  example_tests[1]_include.cmake  example_tests[1]_tests.cmake
mybuild/Testing/Temporary/: CTestCostData.txt
